# migration-guard

./: .env.example  .gitattributes  .gitignore  .migrationguard.example.toml  Dockerfile  LICENSE  README.md  RULES.md  action.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat
.github/workflows/: main.yml
examples/: dangerous_migration.sql  safe_migration.sql
src/migration_guard/: __init__.py  analyzer.py  api.py  cli.py  config.py  models.py  parser.py  reporting.py  suppressions.py
src/migration_guard/rules/: __init__.py  base.py  builtin.py  extended.py
tests/: test_analyzer.py  test_api.py  test_autofix.py  test_cli.py  test_config.py  test_config_file.py  test_dialect.py  test_docs.py  test_fix_diff.py  test_literal_masking.py  test_models.py  test_parser.py  test_public_api.py  test_reporting.py  test_reporting_github.py  test_rule_catalog.py  test_rules.py  test_rules_extended.py  test_rules_locking.py  test_rules_more.py  test_suppressions.py
